--- a/FrontEnd/views/frame.html
+++ b/FrontEnd/views/frame.html
@@ -5,7 +5,6 @@
     <title>Lyric~音乐工厂</title>
     <link rel="stylesheet" href="../public/style/frame.css">
     <link rel="stylesheet" href="../public/style/music.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../public/image/sprite/favicon.ico" />
     <script src="../Lib/angular/angular.min.js"></script>
     <script src="../Lib/angular/angular-route.min.js"></script>
     <script src="../Lib/seajs/sea.js"></script>
@@ -30,6 +29,7 @@
             </div>
             <div class="top-user">
                 <a href="#/login" class="user-login">登录</a>
+                <a href="#/reg" class="user-login">注册</a>
                 <div class="user-memb">
                     <h4>用户</h4>
                     <ul class="slide-down">
