--- a/FrontEnd/views/my.html
+++ b/FrontEnd/views/my.html
@@ -14,10 +14,10 @@
             <h3>我的收藏</h3>
             <ul></ul>
         </div>
-        <div class="main-mform column">
+        <!-- <div class="main-mform column">
             <h3>我的歌单</h3>
             <ul></ul>
-        </div>
+        </div> -->
         <div class="main-mfriend column">
             <h3>我的好友</h3>
             <ul></ul>
