--- a/FrontEnd/views/upload.html
+++ b/FrontEnd/views/upload.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../public/style/upload.css"/>
 <div class="container">
     <h3>上传音乐</h3>
-    <form action="../../phpCtrl/upload_file.php" method="post" enctype="multipart/form-data">
+    <form action="../../BackEnd/index.php/Home/Music/upload" method="post" enctype="multipart/form-data">
         <h4>选择文件</h4>
         <div class="form-group">
             <label for="name">曲名</label>
