--- a/FrontEnd/public/style/upload.css
+++ b/FrontEnd/public/style/upload.css
@@ -14,7 +14,7 @@
 form {
     color: #f3f3f3;
     background: #555;
-    margin: 0 auto;
+    margin: 10px auto;
     text-align: center;
     min-width: 240px;
     font-size: 14px;
