--- a/front-end/src/style/base.scss
+++ b/front-end/src/style/base.scss
@@ -1,4 +1,4 @@
-html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dd, dt, p {
+html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dd, dt, p, form, input {
 	margin: 0;
 	padding: 0;
 }
