--- a/FrontEnd/views/frame.html
+++ b/FrontEnd/views/frame.html
@@ -69,11 +69,10 @@
                 <li><a href="javascript:;"> 客户服务</a></li><li>-</li>
                 <li><a href="javascript:;"> 服务条款</a></li><li>-</li>
                 <li><a href="javascript:;"> 网站导航</a></li>
-                <span>Lyric旗下版权所有©1997-2015 </span>
             </ul>
-            <p>网络文化经营许可证：粤网文[2014]0332-034号</p>
+            <p>Zenaro 私人音乐素材定制版权所有©2015 - 2017 </p>
         </div>
-        <a class="feedback" href="javascript:;"><i></i>意见反馈</a>
+        <!-- <a class="feedback" href="javascript:;"><i></i>意见反馈</a> -->
     </div>
 </div>
 
