--- a/FrontEnd/views/login.html
+++ b/FrontEnd/views/login.html
@@ -6,7 +6,7 @@
                 <h3>邮箱登录</h3>
             </div>
             <div class="text text-top">
-                <input type="text" name="user" placeholder="邮箱">
+                <input type="email" name="user" placeholder="邮箱">
             </div>
             <div class="text">
                 <input type="password" name="pwd" placeholder="密码">
