--- a/FrontEnd/views/reg.html
+++ b/FrontEnd/views/reg.html
@@ -9,7 +9,7 @@
                 <input type="text" name="name" placeholder="昵称">
             </div>
             <div class="text">
-                <input type="text" name="email" placeholder="邮箱">
+                <input type="email" name="email" placeholder="邮箱">
             </div>
             <div class="text">
                 <input type="password" name="pwd" placeholder="登录密码（6-16位）">
